attic/old_tests/xml/validxml/obsTime/goodtime.xml.README
goodtime.xml: OK obsTime since 2016 is a leap year
