attic/old_tests/xml/invalidxml/obsTime/badtime6.xml.README
badtime6.xml: BAD because obsTime 2015 is not a leap year and 02-29 is not legal
